se cambia nombre de proyecto para poder correrlo.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "front",
-  "displayName": "front"
+  "name": "tpo-frontend-movie-finder",
+  "displayName": "tpo-frontend-movie-finder"
 }
