--- a/ios/front.xcodeproj/xcshareddata/xcschemes/front.xcscheme
+++ b/ios/front.xcodeproj/xcshareddata/xcschemes/front.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "front.app"
-               BlueprintName = "front"
+               BlueprintName = "tpo-frontend-movie-finder"
                ReferencedContainer = "container:front.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -56,7 +56,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "front.app"
-            BlueprintName = "front"
+            BlueprintName = "tpo-frontend-movie-finder"
             ReferencedContainer = "container:front.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -73,7 +73,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "front.app"
-            BlueprintName = "front"
+            BlueprintName = "tpo-frontend-movie-finder"
             ReferencedContainer = "container:front.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
